Tue May 12 06:48:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: Improve error output.

Sat May 09 16:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py,
	  flax/searchclient/unittests/createdb_test.py,
	  flax/searchclient/utils.py: More client stuff - nearly working, honest!

Sat May 09 13:45:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py,
	  flax/searchclient/unittests/createdb_test.py,
	  flax/searchclient/utils.py: Some better escaping, not that it works.

Sat May 09 12:59:50 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: use version prefix, and the right HTTP method.

Sat May 09 08:18:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/__init__.py,flax/searchclient/client.py,
	  flax/searchclient/unittests/createdb_test.py,
	  flax/searchclient/unittests/testsettings.py,
	  flax/searchclient/utils.py: Small progress.

Sat May 09 00:04:44 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/: Initial skeleton of a python client - not yet functional.