@@ -1,3 +1,8 @@
+Thu May 14 16:46:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchclient/client.py: Many updates to the client; add
+	  document, schemas, search results.
+
 Tue May 12 06:48:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchclient/client.py: Improve error output.
